# Utilities

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _clang-format
basic_netcat/: basic_netcat.sln
basic_netcat/basic_netcat/: basic_netcat.vcxproj  main.cpp
basic_netcat/cat/: main.cpp  xcat.vcxproj
basic_rm/: basic_rm.sln
basic_rm/basic_rm/: basic_rm.vcxproj  input.hpp  main.cpp  main.hpp
clean_twin/: Clean_twin.sln
clean_twin/Clean_twin/: Clean_twin.vcxproj  File_comparer.hpp  main.cpp  main.hpp
search/: _clang-format  search.sln
search/search/: InputOutput.hpp  Makefile  afilesystem.hpp  main.cpp  main.hpp  search.vcxproj  search.vcxproj.filters  search_task.cpp  search_task.hpp
search/search/Debug Large Test/: vc120.idb
search/search/Debug Large Test/xsearch.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  xsearch.lastbuildstate
search/search/Small Test/xsearch.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  xsearch.lastbuildstate
